[gd_scene load_steps=2 format=1]

[ext_resource path="res://addons/com.timoschwarzer.polygonizer/SettingsDialog.gd" type="Script" id=1]

[node name="SettingsDialog" type="ConfirmationDialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 329.0
margin/bottom = 141.0
popup/exclusive = false
window/title = "Polygonizer Settings"
dialog/hide_on_ok = true
script/script = ExtResource( 1 )

[node name="ResolutionSpinBox" type="SpinBox" parent="."]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 130.0
margin/top = 20.0
margin/right = 20.0
margin/bottom = 44.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 5.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = "px/step"

[node name="MarginSpinBox" type="SpinBox" parent="."]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 130.0
margin/top = 50.0
margin/right = 20.0
margin/bottom = 74.0
range/min = 0.0
range/max = 1000.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = "px"

[node name="ResolutionLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 23.0
margin/right = 100.0
margin/bottom = 37.0
text = "Resolution"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MarginLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 53.0
margin/right = 100.0
margin/bottom = 67.0
text = "Margin"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PreviewCheckBox" type="CheckBox" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 79.0
margin/right = 261.0
margin/bottom = 102.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Preview selection (may be slow)"
flat = false
align = 0


